--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.4.47",
     "nuxt": "^3.13.2",
+    "pinia": "^2.3.1",
     "uuid": "^11.0.3",
     "vue": "latest",
     "vue-router": "latest",
